Fix esp32 wifi and add RPC support on linux (#19260)
* Chef - Extended Pigweed RPC support (#17781)

* Build flash_script package for ESP32

Change-Id: I4e0375c9b9837b3b9f8a3d2570635536e7e34e42
Reviewed-on: https://team-review.git.corp.google.com/c/npe-tse-chip-sdk/third_party/connectedhomeip/+/1419520
Reviewed-by: Doug Ferraz <rochaferraz@google.com>

* new: Wifi and Descriptor clusters on ESP32

Change-Id: I37b61425a55d8210c2286becce47917fddf54a3f
Reviewed-on: https://team-review.git.corp.google.com/c/npe-tse-chip-sdk/third_party/connectedhomeip/+/1418359
Reviewed-by: Rob Oliver <rgoliver@google.com>
Reviewed-by: Kevin Cheung <kkmcheun@google.com>
Reviewed-by: Jerry Lee <jerrymhlee@google.com>

* new: added stub file. Included callbacks for successful operation of lock/unlock commands

Change-Id: I9f4d601feb3b043d3c6689775bcaf40a8c5564d2
Reviewed-on: https://team-review.git.corp.google.com/c/npe-tse-chip-sdk/third_party/connectedhomeip/+/1420959
Reviewed-by: Michael Spang <spang@google.com>
Reviewed-by: Jerry Lee <jerrymhlee@google.com>

* Enable PW RPC server on chef-built virtual device app

Change-Id: I878955e9df26e893c136650654019a8fa14e2a8b
Reviewed-on: https://team-review.git.corp.google.com/c/npe-tse-chip-sdk/third_party/connectedhomeip/+/1417979
Reviewed-by: Doug Ferraz <rochaferraz@google.com>

* cosmetic change

Change-Id: Ia2063a395a8d3f16965356d4a76b0d9df0834e57

* changes to linux pigweed dependencies. Still has issues building Pigweed

Change-Id: I2be4e81f6c2e14112e31a0803813ef56d012b206

* Fix nrfconnect compilation errors (#17713)

* Fix nrfconnect compilation errors

* Chef: fix arguments for clean build

* Build flash_script package for ESP32

Change-Id: I4e0375c9b9837b3b9f8a3d2570635536e7e34e42
Reviewed-on: https://team-review.git.corp.google.com/c/npe-tse-chip-sdk/third_party/connectedhomeip/+/1419520
Reviewed-by: Doug Ferraz <rochaferraz@google.com>

* new: Wifi and Descriptor clusters on ESP32

Change-Id: I37b61425a55d8210c2286becce47917fddf5

--- a/examples/chef/nrfconnect/CMakeLists.txt
+++ b/examples/chef/nrfconnect/CMakeLists.txt
@@ -82,10 +82,11 @@ if(CONFIG_ENABLE_CHIP_SHELL)
 endif(CONFIG_ENABLE_CHIP_SHELL)
 
 target_sources(app PRIVATE
-  ${CHEF}/nrfconnect/main.cpp
-  ${GEN_DIR}/callback-stub.cpp
-  ${GEN_DIR}/IMClusterCommandHandler.cpp
-  ${NRFCONNECT_COMMON}/util/ThreadUtil.cpp
+    ${CHEF}/nrfconnect/main.cpp
+    ${CHEF}/common/stubs.cpp
+    ${GEN_DIR}/callback-stub.cpp
+    ${GEN_DIR}/IMClusterCommandHandler.cpp
+    ${NRFCONNECT_COMMON}/util/ThreadUtil.cpp
 )
 
 message(STATUS ${CHEF}/devices/${SAMPLE_NAME}.zap)
