--- a/src/app/tests/suites/certification/Test_TC_CGEN_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_CGEN_2_1.yaml
@@ -35,7 +35,8 @@ tests:
       command: "readAttribute"
       attribute: "Breadcrumb"
       response:
-          value: 0
+          constraints:
+              type: uint64
 
     - label: "TH1 writes the BreadCrumb attribute as 1 to the DUT"
       command: "writeAttribute"
@@ -66,12 +67,30 @@ tests:
               maxValue: 2
 
     #Issue 17997
-    - label: "TH1 reads BasicCommissioningInfo attribute from DUT"
+    - label:
+          "TH1 reads BasicCommissioningInfo attribute from DUT and Verify that
+          the BasicCommissioningInfo attribute has the following field:
+          FailSafeExpiryLengthSeconds field value is within a duration range of
+          0 to 65535"
+      verification: |
+          ./chip-tool generalcommissioning read basic-commissioning-info 1 0
+          [1651131078.723121][4686:4691] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0030 Attribute 0x0000_0001 DataVersion: 3151774872
+          55555555555555555555
+          [1651131078.723431][4686:4691] CHIP:EM: Sending Standalone Ack for MessageCounter:2959333 on exchange 17319
+      disabled: true
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please enter 'y' for success"
+              - name: "expectedValue"
+                value: "y"
+
+    - label: "TH1 reads SupportsConcurrentConnection attribute from the DUT"
       command: "readAttribute"
-      attribute: "BasicCommissioningInfo"
+      attribute: "SupportsConcurrentConnection"
       response:
-          value:
-              {
-                  FailSafeExpiryLengthSeconds: 60,
-                  MaxCumulativeFailsafeSeconds: 900,
-              }
+          constraints:
+              type: bool
