--- a/src/controller/BUILD.gn
+++ b/src/controller/BUILD.gn
@@ -26,9 +26,7 @@ config("config") {
 static_library("controller") {
   output_name = "libChipController"
 
-  sources = [
-    "CHIPCluster.h",
-  ]
+  sources = [ "CHIPCluster.h" ]
 
   if (chip_controller) {
     sources += [
