--- a/.github/workflows/darwin.yaml
+++ b/.github/workflows/darwin.yaml
@@ -63,6 +63,8 @@ jobs:
           path: |
             .environment/gn_out/.ninja_log
             .environment/pigweed-venv/*.log
+      - name: Creating Output Directory
+        run: mkdir -p /tmp/macos_framework_output
       - name: Run iOS Build Debug
         timeout-minutes: 30
         working-directory: src/darwin/Framework
@@ -88,6 +90,15 @@ jobs:
         # which is apparently being included after CHIPDeviceConfig.h.
         run: xcodebuild -target "Matter" -sdk macosx OTHER_CFLAGS='${inherited} -Werror -Wno-macro-redefined'
         working-directory: src/darwin/Framework
+      - name: Copying Framework to Temporary Path
+        run: |
+          find ~/Library/Developer/
+          ls -la ~/Library/Developer/Xcode/
+          ls -la ~/Library/Developer/Xcode/DerivedData
+          ls -la ~/Library/Developer/Xcode/DerivedData/Build
+          ls -la ~/Library/Developer/Xcode/DerivedData/Build/Products
+          ls -la ~/Library/Developer/Xcode/DerivedData/Build/Products/Debug
+          mv ~/Library/Developer/Xcode/DerivedData/Build/Products/Debug/Matter.framework /tmp/macos_framework_output
       - name: Clean Build
         run: xcodebuild clean
         working-directory: src/darwin/Framework
