--- a/src/app/tests/suites/certification/Test_TC_DGSW_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DGSW_2_2.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name: 45.1.3. [TC-SWDIAG-2.1] Event functionality with server as DUT
+name: 43.2.2. [TC-DGSW-2.2] Event functionality with server as DUT
 
 config:
     nodeId: 0x12344321
