--- a/examples/platform/linux/BUILD.gn
+++ b/examples/platform/linux/BUILD.gn
@@ -17,6 +17,7 @@ import("${chip_root}/examples/common/pigweed/pigweed_rpcs.gni")
 import("${chip_root}/src/app/common_flags.gni")
 import("${chip_root}/src/lib/core/core.gni")
 import("${chip_root}/src/lib/lib.gni")
+import("${chip_root}/src/platform/device.gni")
 
 config("app-main-config") {
   include_dirs = [ "." ]
@@ -66,6 +67,10 @@ source_set("app-main") {
   if (chip_enable_transport_trace) {
     public_deps +=
         [ "${chip_root}/examples/common/tracing:trace_handlers_decoder" ]
+  }
+
+  if (chip_enable_ota_requestor) {
+    public_deps += [ "${chip_root}/examples/ota-requestor-app/ota-requestor-common" ]
   }
 
   public_configs = [ ":app-main-config" ]
