--- a/examples/platform/linux/BUILD.gn
+++ b/examples/platform/linux/BUILD.gn
@@ -17,10 +17,15 @@ import("${chip_root}/examples/common/pigweed/pigweed_rpcs.gni")
 import("${chip_root}/src/app/common_flags.gni")
 import("${chip_root}/src/lib/core/core.gni")
 import("${chip_root}/src/lib/lib.gni")
-import("${chip_root}/src/platform/device.gni")
 
 config("app-main-config") {
   include_dirs = [ "." ]
+}
+
+source_set("ota-test-event-trigger") {
+  sources = [
+    "${chip_root}/src/app/clusters/ota-requestor/OTATestEventTriggerDelegate.h",
+  ]
 }
 
 source_set("app-main") {
@@ -56,6 +61,7 @@ source_set("app-main") {
   }
 
   public_deps = [
+    ":ota-test-event-trigger",
     "${chip_root}/examples/providers:device_info_provider",
     "${chip_root}/src/app/server",
     "${chip_root}/src/credentials:default_attestation_verifier",
@@ -67,11 +73,6 @@ source_set("app-main") {
   if (chip_enable_transport_trace) {
     public_deps +=
         [ "${chip_root}/examples/common/tracing:trace_handlers_decoder" ]
-  }
-
-  if (chip_enable_ota_requestor) {
-    public_deps +=
-        [ "${chip_root}/examples/ota-requestor-app/ota-requestor-common" ]
   }
 
   public_configs = [ ":app-main-config" ]
