--- a/src/app/tests/suites/certification/Test_TC_DIAG_TH_NW_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DIAG_TH_NW_2_1.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 51.2. TC-DIAG-TH_NW-1.2 Attributes [DUT Server]
+name: 49.2.1. [TC-DIAG-TH_NW-2.1] Attributes [DUT- Server]
 
 config:
     nodeId: 0x12344321
