--- a/examples/chef/ci_manifest.json
+++ b/examples/chef/ci_manifest.json
@@ -1,1 +1,9 @@
-{"devices": {"lighting-app": {"zap_hash": "1e7c1687f9e61abc2eda4a689dfaabd4", "zzz_gen_hash": "307c62266de16fea16349015f7ea1050"}}, "zap_commit": "ca9cbecbc36228db65349864a77402075c39d9d2"}
+{
+    "devices": {
+        "lighting-app": {
+            "zap_hash": "1e7c1687f9e61abc2eda4a689dfaabd4",
+            "zzz_gen_hash": "307c62266de16fea16349015f7ea1050"
+        }
+    },
+    "zap_commit": "ca9cbecbc36228db65349864a77402075c39d9d2"
+}
