--- a/src/app/tests/suites/certification/PICS.yaml
+++ b/src/app/tests/suites/certification/PICS.yaml
@@ -416,3 +416,31 @@ PICS:
           "Can the MeasuredValue attribute changed by physical control at the
           device?"
       id: MANUAL_FLOW_CHANGE
+
+    #Pressure Measurement
+    - label: "Does the device implement the MeasuredValue attribute?"
+      id: PRS.S.A0000
+
+    - label: "Does the device implement the MinMeasuredValue attribute?"
+      id: PRS.S.A0001
+
+    - label: "Does the device implement the MaxMeasuredValue attribute?"
+      id: PRS.S.A0002
+
+    - label: "Does the device implement the Tolerance attribute?"
+      id: PRS.S.A0003
+
+    - label: "Does the device implement the ScaledValue attribute?"
+      id: PRS.S.A0010
+
+    - label: "Does the device implement the MinScaledValue attribute?"
+      id: PRS.S.A0011
+
+    - label: "Does the device implement the MaxScaledValue attribute?"
+      id: PRS.S.A0012
+
+    - label: "Does the device implement the ScaledTolerance attribute?"
+      id: PRS.S.A0013
+
+    - label: "Does the device implement the Scale attribute?"
+      id: PRS.S.A0014
