--- a/src/app/tests/suites/certification/Test_TC_CC_9_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_CC_9_1.yaml
@@ -59,6 +59,14 @@ tests:
               - name: "optionsOverride"
                 value: 0
 
+    - label: "Wait for 1000ms"
+      cluster: "DelayCommands"
+      command: "WaitForMs"
+      arguments:
+          values:
+              - name: "ms"
+                value: 1000
+
     - label: "Sends ColorLoopSet Command - Set all Attributes"
       command: "ColorLoopSet"
       PICS: CR_COLORLOOPSET
@@ -194,11 +202,10 @@ tests:
       response:
           value: 1
 
-    #Issue 18848
     - label: "Read ColorLoopStoredEnhancedHue attribute from DUT"
       command: "readAttribute"
       attribute: "ColorLoopStoredEnhancedHue"
-      PICS: PICS_SKIP_SAMPLE_APP && A_COLORLOOPSTOREDENHANCEDHUE
+      PICS: A_COLORLOOPSTOREDENHANCEDHUE
       response:
           value: 16384
 
@@ -344,11 +351,10 @@ tests:
       response:
           value: 1
 
-    #Issue 18848
     - label: "Read ColorLoopStoredEnhancedHue attribute from DUT"
       command: "readAttribute"
       attribute: "ColorLoopStoredEnhancedHue"
-      PICS: PICS_SKIP_SAMPLE_APP && A_COLORLOOPSTOREDENHANCEDHUE
+      PICS: A_COLORLOOPSTOREDENHANCEDHUE
       response:
           value: 16384
 
@@ -446,7 +452,7 @@ tests:
       arguments:
           values:
               - name: "enhancedHue"
-                value: 40960
+                value: 16384
               - name: "direction"
                 value: 0
               - name: "transitionTime"
@@ -456,20 +462,20 @@ tests:
               - name: "optionsOverride"
                 value: 0
 
-    - label: "Wait 2000ms"
+    - label: "Wait 1000ms"
       cluster: "DelayCommands"
       command: "WaitForMs"
       arguments:
           values:
               - name: "ms"
-                value: 2000
+                value: 1000
 
     - label: "Read EnhancedCurrentHue attribute from DUT"
       command: "readAttribute"
       attribute: "EnhancedCurrentHue"
       PICS: A_ENHANCEDCURRENTHUE
       response:
-          value: 40960
+          value: 16384
 
     - label: "Sends ColorLoopSet Command - Set all Attributes"
       command: "ColorLoopSet"
@@ -525,11 +531,10 @@ tests:
       response:
           value: 1
 
-    #Issue 18848
     - label: "Read ColorLoopStoredEnhancedHue attribute from DUT"
       command: "readAttribute"
       attribute: "ColorLoopStoredEnhancedHue"
-      PICS: PICS_SKIP_SAMPLE_APP && A_COLORLOOPSTOREDENHANCEDHUE
+      PICS: A_COLORLOOPSTOREDENHANCEDHUE
       response:
           value: 16384
 
@@ -675,11 +680,10 @@ tests:
       response:
           value: 1
 
-    #Issue 18848
     - label: "Read ColorLoopStoredEnhancedHue attribute from DUT"
       command: "readAttribute"
       attribute: "ColorLoopStoredEnhancedHue"
-      PICS: PICS_SKIP_SAMPLE_APP && A_COLORLOOPSTOREDENHANCEDHUE
+      PICS: A_COLORLOOPSTOREDENHANCEDHUE
       response:
           value: 16384
 
