--- a/src/app/tests/suites/certification/Test_TC_CC_9_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_CC_9_2.yaml
@@ -60,6 +60,14 @@ tests:
               - name: "optionsOverride"
                 value: 0
 
+    - label: "Wait for 1000ms"
+      cluster: "DelayCommands"
+      command: "WaitForMs"
+      arguments:
+          values:
+              - name: "ms"
+                value: 1000
+
     - label: "Sends ColorLoopSet Command - Set all Attributes"
       command: "ColorLoopSet"
       PICS: CR_COLORLOOPSET
@@ -135,11 +143,10 @@ tests:
       response:
           value: 1
 
-    #Issue 18848
     - label: "Read ColorLoopStoredEnhancedHue attribute from DUT."
       command: "readAttribute"
       attribute: "ColorLoopStoredEnhancedHue"
-      PICS: PICS_SKIP_SAMPLE_APP && A_COLORLOOPSTOREDENHANCEDHUE
+      PICS: A_COLORLOOPSTOREDENHANCEDHUE
       response:
           value: 16384
 
