--- a/examples/darwin-framework-tool/BUILD.gn
+++ b/examples/darwin-framework-tool/BUILD.gn
@@ -23,6 +23,7 @@ assert(chip_build_tools)
 config("config") {
   include_dirs = [
     ".",
+    "${chip_root}/examples/darwin-framework-tool/commands/common",
     "${chip_root}/zzz_generated/darwin-framework-tool",
     "${chip_root}/examples/chip-tool/commands/clusters/ComplexArgument.h",
     "/tmp/macos_framework_output",
@@ -56,6 +57,8 @@ executable("darwin-framework-tool") {
     "commands/clusters/WriteAttributeCommandBridge.h",
     "commands/common/CHIPCommandBridge.mm",
     "commands/common/CHIPCommandStorageDelegate.mm",
+    "commands/common/MTRError_Internal.h",
+    "commands/common/MTRError.mm",
     "commands/common/CHIPToolKeypair.mm",
     "commands/pairing/Commands.h",
     "commands/pairing/OpenCommissioningWindowCommand.h",
@@ -78,7 +81,6 @@ executable("darwin-framework-tool") {
   deps = [
     "${chip_root}/examples/chip-tool:chip-tool-utils",
     "${chip_root}/src/app/server",
-    # "${chip_root}/src/darwin/Framework/CHIP",
     "${chip_root}/src/lib",
     "${chip_root}/src/platform",
     "${chip_root}/third_party/inipp",
