Add IssueNOCChain and GetNodeId for chip-repl to use
This was derived from:
https://github.com/erjiaqing/connectedhomeip/tree/test/20220606

This is added to allow for manual testing AddNOC and UpdateNOC
using chip-repl.

--- a/src/controller/python/BUILD.gn
+++ b/src/controller/python/BUILD.gn
@@ -52,6 +52,7 @@ shared_library("ChipDeviceCtrl") {
       "ChipDeviceController-ScriptDevicePairingDelegate.h",
       "ChipDeviceController-StorageDelegate.cpp",
       "ChipDeviceController-StorageDelegate.h",
+      "ChipDeviceController-IssueNocChain.cpp",
       "OpCredsBinding.cpp",
       "chip/clusters/attribute.cpp",
       "chip/clusters/command.cpp",
