--- a/examples/darwin-framework-tool/BUILD.gn
+++ b/examples/darwin-framework-tool/BUILD.gn
@@ -91,6 +91,7 @@ executable("darwin-framework-tool") {
   deps = [
     "${chip_root}/examples/chip-tool:chip-tool-utils",
     "${chip_root}/src/app/server",
+    "${chip_root}/src/darwin/Framework/CHIP:static-matter",
     "${chip_root}/src/lib",
     "${chip_root}/src/platform",
     "${chip_root}/third_party/inipp",
