--- a/src/darwin/Framework/CHIP/BUILD.gn
+++ b/src/darwin/Framework/CHIP/BUILD.gn
@@ -17,7 +17,6 @@ import("//build_overrides/chip.gni")
 config("darwin_config") {
   include_dirs = [
     ".",
-    "..",
   ]
 
   cflags = [
@@ -29,61 +28,61 @@ config("darwin_config") {
 static_library("framework") {
   sources = [
     "${chip_root}/src/app/clusters/ota-provider/ota-provider.cpp",
-    "Matter.h",
-    "MTRAttestationTrustStoreBridge.mm",
-    "MTRCluster.mm",
-    "MTRCommissioningParameters.m",
-    "MTRControllerAccessControl.h",
-    "MTRControllerAccessControl.mm",
-    "MTRDevice.h",
-    "MTRDevice.mm",
-    "MTRDeviceAttestationDelegateBridge.h",
-    "MTRDeviceAttestationDelegateBridge.mm",
-    "MTRDeviceConnectionBridge.mm",
-    "MTRDeviceController.h",
-    "MTRDeviceController.mm",
-    "MTRDeviceControllerStartupParams.h",
-    "MTRDeviceControllerStartupParams.mm",
-    "MTRDeviceControllerStartupParams_Internal.h",
-    "MTRDeviceController_Internal.h",
-    "MTRDevicePairingDelegate.h",
-    "MTRDevicePairingDelegateBridge.h",
-    "MTRDevicePairingDelegateBridge.mm",
-    "MTRDevice_Internal.h",
-    "MTRError.h",
-    "MTRError.mm",
-    "MTRError_Internal.h",
-    "MTRIMDispatch.mm",
-    "MTRLogging.h",
-    "MTRManualSetupPayloadParser.h",
-    "MTRManualSetupPayloadParser.mm",
-    "MTROnboardingPayloadParser.m",
-    "MTROperationalCredentialsDelegate.mm",
-    "MTRP256KeypairBridge.mm",
-    "MTRPersistentStorageDelegate.h",
-    "MTRPersistentStorageDelegateBridge.h",
-    "MTRPersistentStorageDelegateBridge.mm",
-    "MTRQRCodeSetupPayloadParser.h",
-    "MTRQRCodeSetupPayloadParser.mm",
-    "MTRSetupPayload.h",
-    "MTRSetupPayload.mm",
-    "MTRCertificates.h",
-    "MTRCertificates.mm",
-    "MTRMemory.h",
-    "MTRMemory.mm",
-    "MTRControllerFactory.h",
-    "MTRControllerFactory.mm",
-    "MTRControllerFactory_Internal.h",
-    "zap-generated/MTRAttributeTLVValueDecoder.mm",
-    "zap-generated/MTRCallbackBridge.mm",
-    "zap-generated/MTRClustersObjc.h",
-    "zap-generated/MTRClustersObjc.mm",
-    "zap-generated/MTRCommandPayloadsObjc.h",
-    "zap-generated/MTRCommandPayloadsObjc.mm",
-    "zap-generated/MTREventTLVValueDecoder.mm",
-    "zap-generated/MTRStructsObjc.h",
-    "zap-generated/MTRStructsObjc.mm",
-    "zap-generated/MTRClusterConstants.h",
+    # "Matter.h",
+    # "MTRAttestationTrustStoreBridge.mm",
+    # "MTRCluster.mm",
+    # "MTRCommissioningParameters.m",
+    # "MTRControllerAccessControl.h",
+    # "MTRControllerAccessControl.mm",
+    # "MTRDevice.h",
+    # "MTRDevice.mm",
+    # "MTRDeviceAttestationDelegateBridge.h",
+    # "MTRDeviceAttestationDelegateBridge.mm",
+    # "MTRDeviceConnectionBridge.mm",
+    # "MTRDeviceController.h",
+    # "MTRDeviceController.mm",
+    # "MTRDeviceControllerStartupParams.h",
+    # "MTRDeviceControllerStartupParams.mm",
+    # "MTRDeviceControllerStartupParams_Internal.h",
+    # "MTRDeviceController_Internal.h",
+    # "MTRDevicePairingDelegate.h",
+    # "MTRDevicePairingDelegateBridge.h",
+    # "MTRDevicePairingDelegateBridge.mm",
+    # "MTRDevice_Internal.h",
+    # "MTRError.h",
+    # "MTRError.mm",
+    # "MTRError_Internal.h",
+    # "MTRIMDispatch.mm",
+    # "MTRLogging.h",
+    # "MTRManualSetupPayloadParser.h",
+    # "MTRManualSetupPayloadParser.mm",
+    # "MTROnboardingPayloadParser.m",
+    # "MTROperationalCredentialsDelegate.mm",
+    # "MTRP256KeypairBridge.mm",
+    # "MTRPersistentStorageDelegate.h",
+    # "MTRPersistentStorageDelegateBridge.h",
+    # "MTRPersistentStorageDelegateBridge.mm",
+    # "MTRQRCodeSetupPayloadParser.h",
+    # "MTRQRCodeSetupPayloadParser.mm",
+    # "MTRSetupPayload.h",
+    # "MTRSetupPayload.mm",
+    # "MTRCertificates.h",
+    # "MTRCertificates.mm",
+    # "MTRMemory.h",
+    # "MTRMemory.mm",
+    # "MTRControllerFactory.h",
+    # "MTRControllerFactory.mm",
+    # "MTRControllerFactory_Internal.h",
+    # "zap-generated/MTRAttributeTLVValueDecoder.mm",
+    # "zap-generated/MTRCallbackBridge.mm",
+    # "zap-generated/MTRClustersObjc.h",
+    # "zap-generated/MTRClustersObjc.mm",
+    # "zap-generated/MTRCommandPayloadsObjc.h",
+    # "zap-generated/MTRCommandPayloadsObjc.mm",
+    # "zap-generated/MTREventTLVValueDecoder.mm",
+    # "zap-generated/MTRStructsObjc.h",
+    # "zap-generated/MTRStructsObjc.mm",
+    # "zap-generated/MTRClusterConstants.h",
   ]
 
   public_deps = [
@@ -101,6 +100,6 @@ static_library("framework") {
   public_configs = [ ":darwin_config" ]
 }
 
-group("chip") {
+group("static-matter") {
   public_deps = [ ":framework" ]
 }
