Trying this now

--- a/src/darwin/Framework/CHIP/BUILD.gn
+++ b/src/darwin/Framework/CHIP/BUILD.gn
@@ -50,9 +50,9 @@ static_library("framework") {
     # "MTRDevicePairingDelegateBridge.mm",
     # "MTRDevice_Internal.h",
     # "MTRError.h",
-    # "MTRError.mm",
+    "MTRError.mm",
     # "MTRError_Internal.h",
-    # "MTRIMDispatch.mm",
+    "MTRIMDispatch.mm",
     # "MTRLogging.h",
     # "MTRManualSetupPayloadParser.h",
     # "MTRManualSetupPayloadParser.mm",
