[BL602] matter app specific DeviceInfoProviderImpl.cpp, instead of copy it, change product id.

--- a/examples/lighting-app/bouffalolab/bl602/BUILD.gn
+++ b/examples/lighting-app/bouffalolab/bl602/BUILD.gn
@@ -82,6 +82,7 @@ bl602_executable("lighting_app") {
     "${chip_root}/examples/lighting-app/lighting-common",
     "${chip_root}/src/lib",
     "${chip_root}/src/setup_payload",
+    "${chip_root}/examples/providers:device_info_provider",
   ]
 
   include_dirs = [ "include" ]
