Improve targets linking
Change SDK storage linking condtion
Add linking cmsis-rtos-implementation target to unit-test app

Signed-off-by: ATmobica <artur.tynecki@mobica.com>

--- a/config/openiotsdk/CMakeLists.txt
+++ b/config/openiotsdk/CMakeLists.txt
@@ -250,9 +250,9 @@ target_link_libraries(openiotsdk-chip INTERFACE
     $<$<TARGET_EXISTS:mbedtls>:mbedtls>
     $<$<TARGET_EXISTS:lwipcore>:lwipcore>
     $<$<TARGET_EXISTS:iotsdk-ip-network-api>:iotsdk-ip-network-api>
+    $<$<TARGET_EXISTS:iotsdk-tdbstore>:iotsdk-tdbstore>
+    $<$<TARGET_EXISTS:iotsdk-blockdevice>:iotsdk-blockdevice>
     $<$<TARGET_EXISTS:iotsdk-serial-retarget>:$<TARGET_OBJECTS:iotsdk-serial-retarget>>
-    $<$<TARGET_EXISTS:iotsdk-tdbstore>:$<TARGET_OBJECTS:iotsdk-tdbstore>>
-    $<$<TARGET_EXISTS:iotsdk-blockdevice>:$<TARGET_OBJECTS:iotsdk-blockdevice>>
 )
 add_dependencies(openiotsdk-chip chip-gn)
 
