--- a/integrations/docker/images/chip-build-efr32/Dockerfile
+++ b/integrations/docker/images/chip-build-efr32/Dockerfile
@@ -8,6 +8,8 @@ RUN set -x \
     gcc-arm-none-eabi=15:9-2019-q4-0ubuntu1 \
     binutils-arm-none-eabi=2.34-4ubuntu1+13ubuntu1 \
     ccache=3.7.7-1 \
+    apt-get install git-lfs \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/ \
+    && git lfs install \
     && : # last line
