--- a/integrations/cloudbuild/build-all.yaml
+++ b/integrations/cloudbuild/build-all.yaml
@@ -18,7 +18,7 @@ steps:
       args:
           - >-
               ./scripts/build/build_examples.py --enable-flashbundle
-              --target-glob '*' --skip-target-glob '{tizen-*,*-tests}' build
+              --target-glob '*' --skip-target-glob '{efr32-*,tizen-*,*-tests}' build
               --create-archives /workspace/artifacts/
       id: CompileAll
       waitFor:
