--- a/src/lib/dnssd/tests/BUILD.gn
+++ b/src/lib/dnssd/tests/BUILD.gn
@@ -28,6 +28,7 @@ chip_test_suite("tests") {
 
   public_deps = [
     "${chip_root}/src/lib/dnssd",
+    "${chip_root}/src/lib/support:testing",
     "${nlunit_test_root}:nlunit-test",
   ]
 
@@ -37,8 +38,9 @@ chip_test_suite("tests") {
       "TestIncrementalResolve.cpp",
     ]
 
-    public_deps +=
-        [ "${chip_root}/src/lib/dnssd/minimal_mdns/core/tests:support" ]
+    public_deps += [
+      "${chip_root}/src/lib/dnssd/minimal_mdns/core/tests:support",
+    ]
   }
 
   cflags = [ "-Wconversion" ]
