--- a/src/lib/support/BUILD.gn
+++ b/src/lib/support/BUILD.gn
@@ -17,6 +17,7 @@ import("//build_overrides/chip.gni")
 import("//build_overrides/nlassert.gni")
 import("//build_overrides/nlfaultinjection.gni")
 import("//build_overrides/nlio.gni")
+import("//build_overrides/nlunit_test.gni")
 
 import("${chip_root}/build/chip/chip_version.gni")
 import("${chip_root}/build/chip/tests.gni")
@@ -105,10 +106,6 @@ static_library("support") {
     "ThreadOperationalDataset.h",
     "TimeUtils.cpp",
     "TimeUtils.h",
-    "UnitTestRegistration.cpp",
-    "UnitTestRegistration.h",
-    "UnitTestUtils.cpp",
-    "UnitTestUtils.h",
     "Variant.h",
     "ZclString.cpp",
     "ZclString.h",
@@ -186,4 +183,20 @@ static_library("support") {
   if (chip_config_memory_debug_dmalloc) {
     libs += [ "dmallocthcxx" ]
   }
+}
+
+static_library("testing") {
+  sources = [
+    "UnitTestRegistration.cpp",
+    "UnitTestRegistration.h",
+    "UnitTestUtils.cpp",
+    "UnitTestUtils.h",
+  ]
+
+  public_deps = [
+    ":support",
+    "${chip_root}/src/lib/core",
+    "${nlassert_root}:nlassert",
+    "${nlunit_test_root}:nlunit-test",
+  ]
 }
