--- a/src/platform/device.gni
+++ b/src/platform/device.gni
@@ -82,7 +82,7 @@ declare_args() {
   if (chip_device_platform == "linux" || chip_device_platform == "esp32" ||
       chip_device_platform == "mbed" || chip_device_platform == "p6" ||
       chip_device_platform == "ameba" || chip_device_platform == "webos" ||
-      chip_device_platform == "mw320") || chip_device_platform == "bl602") {
+      chip_device_platform == "mw320" || chip_device_platform == "bl602") {
     chip_mdns = "minimal"
   } else if (chip_device_platform == "darwin" ||
              chip_device_platform == "cc13x2_26x2" || current_os == "android" ||
