Improve application running
Create FVP configuraiton file in example platform directory
Use FVP configuraiton file in run script
Use a telnet client to communicate with application run on FVP
Run FVP as a background process and connect via telnet to the terminal
Adapt the debugigng Vscode task to telnet usage

Signed-off-by: ATmobica <artur.tynecki@mobica.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -305,8 +305,8 @@
                 },
                 "background": {
                     "activeOnStart": true,
-                    "beginsPattern": "^.*Listening for serial connection*",
-                    "endsPattern": "^.*GDBServer: Listening*"
+                    "beginsPattern": "^.*Trying*",
+                    "endsPattern": "^.*Connected to localhost*"
                 }
             }
         }
