--- a/src/transport/tests/BUILD.gn
+++ b/src/transport/tests/BUILD.gn
@@ -37,9 +37,13 @@ chip_test_suite("tests") {
     "TestPeerConnections.cpp",
     "TestPeerMessageCounter.cpp",
     "TestSecureSession.cpp",
-    "TestSecureSessionTable.cpp",
     "TestSessionManager.cpp",
   ]
+
+  if (chip_device_platform != "mbed" && chip_device_platform != "efr32" &&
+      chip_device_platform != "esp32" && chip_device_platform != "nrfconnect") {
+    test_sources += [ "TestSecureSessionTable.cpp" ]
+  }
 
   cflags = [ "-Wconversion" ]
 
