--- a/src/lib/shell/BUILD.gn
+++ b/src/lib/shell/BUILD.gn
@@ -89,6 +89,11 @@ static_library("shell") {
       "MainLoopMW320.cpp",
       "streamer_mw320.cpp",
     ]
+  } else if (chip_device_platform == "openiotsdk") {
+    sources += [
+      "MainLoopDefault.cpp",
+      "streamer_openiotsdk.cpp",
+    ]
   } else {
     sources += [ "MainLoopDefault.cpp" ]
   }
