Open IoT SDK shell example
Improve shell example to link shell library and execute shell commands
Improve mbedtls configuration

Signed-off-by: ATmobica <artur.tynecki@mobica.com>

--- a/examples/shell/openiotsdk/CMakeLists.txt
+++ b/examples/shell/openiotsdk/CMakeLists.txt
@@ -38,6 +38,8 @@ target_include_directories(${APP_TARGET} PRIVATE
 
 target_sources(${APP_TARGET} PRIVATE
                 main/main.cpp
+                ${SHELL_COMMON}/cmd_misc.cpp
+                ${SHELL_COMMON}/globals.cpp
 )
 
 target_link_libraries(${APP_TARGET} 
